--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,21 +4,33 @@
     <string name="label_error_text">Error</string>
     <string name="base">Base Currency</string>
     <string name="imageview_desc">Bitcoin Logo</string>
+    <string name="toggle_buy">Buy</string>
+    <string name="toggle_sell">Sell</string>
+    <string name="buy_text">Buy: </string>
+    <string name="sell_text">Sell: </string>
 
     <string-array name="currency_array">
         <item>AUD</item>
         <item>BRL</item>
         <item>CAD</item>
+        <item>CHF</item>
+        <item>CLP</item>
         <item>CNY</item>
+        <item>DKK</item>
         <item>EUR</item>
         <item>GBP</item>
         <item>HKD</item>
+        <item>ISK</item>
         <item>JPY</item>
+        <item>KRW</item>
+        <item>NZD</item>
         <item>PLN</item>
         <item>RUB</item>
         <item>SEK</item>
+        <item>SGD</item>
+        <item>THB</item>
+        <item>TWD</item>
         <item>USD</item>
-        <item>ZAR</item>
     </string-array>
 
 
